[package]
name = "titan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.0", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
# serde_yaml = "0.8"
# rand = "0.7.2"
bincode = "1.3.1"
crc32fast = "1.2.0"
nanoid = "0.3.0"
sha2 = "0.10.8"
tokio = {version="1.0.0", features = ["full"]}